Added to the recipe page content
Added an image with a description about the recipe.
Added the ingredients and instructions.

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Grilled Cheese</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8126003.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="grilled-cheese-sandwich-hug-by-a-small-figure">
+    <h2>Description</h2>
+    <p>A hot sandwich made with buttered and toasted bread and originally filled with American cheese, but is now commonly made with one or more different cheeses.</p>
+    <h2>Grilled Cheese Ingredients</h2>
+    <p>This classic grilled cheese sandwich recipe calls for just white bread, sliced cheese, and butter. It's easy to switch up the bread and cheese to suit your taste preferences and, if you like, you can substitute mayonnaise for butter.</p>
+    <h2>How to Make the Best Grilled Cheese</h2>
+    <p>Here's a very brief overview of what you can expect when you make homemade lasagna:
+        <ol>
+            <li>Butter the bread on one side and place the bread butter-side down on a hot skillet.</li>
+            <li>Top with cheese, then place another slice of bread on top (butter-side up).</li>
+            <li>Cook until the bottom slice is lightly browned, then flip.</li>
+            <li>Continue cooking until the cheese is melted.</li>
+        </ol>
+    </p>
 </body>
 </html>
