--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/grilled-cheese.html">Grilled Cheese</a></li>
+        <li><a href="./recipes/egg-salad.html">Egg Salad</a></li>
     </ul>
 </body>
 </html>
