--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/grilled-cheese.html">Grilled Cheese</a></li>
         <li><a href="./recipes/egg-salad.html">Egg Salad</a></li>
+        <li><a href="./recipes/sweet-slaw.html">Sweet Slaw</a></li>
     </ul>
 </body>
 </html>
